# sentinel

./: .gitignore  CHECKS  DEPLOY.md  Dockerfile  HELM_DEPLOY.md  Justfile  Procfile  README.md  alembic.ini  nginx.conf.sigil  pyproject.toml
assets/: sentinel.afdesign
db_migrations/: env.py
db_migrations/versions/: 0002_nullable_sentinel_check_run_id.py  0004_add_pr_title_to_pr_heads_current.py
deploy/: configmap.yaml  deployment.yaml  pvc.yaml  route.yaml  service.yaml  serviceaccount.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-web.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: migrate_webhook_db_projection_columns.sh
src/sentinel/: cache.py  cli.py  config.py  db_migrations.py  logger.py  metric.py  model.py  state_dashboard.py  web.py
src/sentinel/db_migration_scripts/: env.py
src/sentinel/db_migration_scripts/versions/: 0001_initial.py  0003_store_sentinel_output_content.py  0005_add_pr_draft_to_pr_heads_current.py  0006_add_sentinel_activity_events.py  0007_add_output_checks_json_and_check_run_html_url.py  0008_add_webhook_event_refs_for_pr_view.py
src/sentinel/github/: __init__.py  api.py  model.py
src/sentinel/projection/: __init__.py  evaluator.py  scheduler.py  types.py
src/sentinel/static/: main.css
src/sentinel/storage/: __init__.py  types.py  webhook_store.py
src/sentinel/templates/: base.html.j2  index.html.j2  queue.html.j2  queue_inner.html.j2  queue_list.html.j2  state.html.j2  state_event_detail.html.j2  state_pr_detail.html.j2  state_pr_detail_content.html.j2  state_table.html.j2
tests/: test_db_migrations.py  test_metric.py  test_projection_evaluator.py  test_projection_scheduler.py  test_rule.py  test_state_dashboard.py  test_storage_types.py  test_webhook_route_persistence.py  test_webhook_store.py
