[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
packages = [
    { include = "sentinel", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
gidgethub = "^5.1.0"
aiohttp = "^3.8.1"
python-dotenv = "^0.19.2"
pysmee = "^0.1.1"
sanic = {extras = ["ext"], version = "^22.6.1"}
cachetools = "^5.0.0"
python-dateutil = "^2.8.2"
pydantic = "^1.9.1"
PyYAML = "^6.0"
tabulate = "^0.8.10"
humanize = "^4.3.0"
more-itertools = "^8.13.0"
pytz = "^2022.1"
notifiers = "^1.3.3"
pytest-asyncio = "^0.19.0"
Jinja2 = "^3.1.2"
aiolimiter = "^1.0.0"
aiocache = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
