[project]
name = "sentinel"
version = "0.1.0"
description = ""
authors = [{ name = "Paul Gessinger", email = "hello@paulgessinger.com" }]
requires-python = ">=3.13"
dependencies = [
    "gidgethub>=5.1.0",
    "aiohttp>=3.8.1",
    "python-dotenv>=0.19.2",
    "pysmee>=0.1.1",
    "sanic[ext]>=22.6.1",
    "cachetools>=5.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=1.9.1",
    "PyYAML>=6.0",
    "tabulate>=0.8.10",
    "humanize>=4.3.0",
    "more-itertools>=8.13.0",
    "pytz>=2022.1",
    "notifiers>=1.3.3",
    "Jinja2>=3.1.2",
    "aiolimiter>=1.0.0",
    "aiocache>=0.11.1",
    "diskcache>=5.4.0",
    "typer>=0.6.1",
    "prometheus-client>=0.14.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=22.1.0",
    "isort>=5.10.1",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
